Edited wiki page ToDo through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -8,3 +8,4 @@
   * *SD FAT* - C - SD card support over SPI with FAT file system. There are more options which one to use. Petite FATFS seems a good candidate. [http://elm-chan.org/fsw/ff/00index_p.html Link1]
   * *DCF77* - C - DCF 77 receiver. I have a couple different ones at hand, however the receiving routine will be the same for all. [http://www2.produktinfo.conrad.com/datenblaetter/175000-199999/190691-da-01-en-DCF77_Empfaengermodul.pdf Conrad 190691] [http://www2.produktinfo.conrad.com/datenblaetter/625000-649999/641138-an-01-en-Anschlussplan_DCF_Empfaengerplatine.pdf Conrad 641138] [http://www.pollin.de/shop/downloads/D810054D.PDF Pollin 810054]
   * *MPXH6115A* - C - Freescale Pressure Sensor [http://cache.freescale.com/files/sensors/doc/data_sheet/MPXA6115A.pdf Link1] [http://cache.freescale.com/files/sensors/doc/data_sheet/MPXAZ6115A.pdf Link2]
+  * *H1 2322 691 90001* - C - Philips/Vishay Humidity Sensor [http://www.vishay.com/docs/29001/23226919.pdf Link1] [http://www.reichelt.de/index.html?;ACTION=7;LA=3;OPEN=0;INDEX=0;FILENAME=B400%252FFEUCHTESENSOR%2523PHI.pdf;SID=25Ty60yn8AAAIAAB3atUIafb42fc59874e4a6e6a8f7265f72fd42 Link2]
