Edited wiki page ToDo through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -7,7 +7,7 @@ There is a long list for modules to be coded. At least I have most of them runni
   * *BTM-220* - C - Cost effective low current Bluetooth Module [http://www.rayson.com/btm220.html Link1] [http://code.google.com/p/lib430/source/browse/docs/BTM220_DataSheet.pdf Link2]
   * *EA DOGM 162* - C - [http://www.lcd-module.de/pdf/doma/dog-m.pdf Link1] [http://www.lcd-module.de/deu/disk/startdog_v20.zip Link2]
   * *EA DOGM 163* - C - [http://www.lcd-module.de/pdf/doma/dog-m.pdf Link1] [http://www.lcd-module.de/deu/disk/startdog_v20.zip Link2]
-  * *EC12* - C - ALPS rotary switch with push button [http://www.alps.com/WebObjects/catalog.woa/E/HTML/Encoder/Incremental/EC12E/EC12E_list.html Link1]
+  * *EC12* - C - ALPS rotary switch with push button. I have various ones at hand, e.g. EC12E2424407 which seems to be discontinued by ALPS. Anyways the difference in the various EC12 variants are more geometric. [http://www.alps.com/WebObjects/catalog.woa/E/HTML/Encoder/Incremental/EC12E/EC12E_list.html Link1]
   * *SD FAT* - C - SD card support over SPI with FAT file system. There are more options which one to use. Petite FATFS seems a good candidate. [http://elm-chan.org/fsw/ff/00index_p.html Link1]
   * *DCF77* - C - DCF 77 receiver. I have a couple different ones at hand, however the receiving routine will be the same for all. [http://www2.produktinfo.conrad.com/datenblaetter/175000-199999/190691-da-01-en-DCF77_Empfaengermodul.pdf Conrad 190691] [http://www2.produktinfo.conrad.com/datenblaetter/625000-649999/641138-an-01-en-Anschlussplan_DCF_Empfaengerplatine.pdf Conrad 641138] [http://www.pollin.de/shop/downloads/D810054D.PDF Pollin 810054]
   * *MPXH6115A* - C - Freescale Pressure Sensor [http://cache.freescale.com/files/sensors/doc/data_sheet/MPXA6115A.pdf Link1] [http://cache.freescale.com/files/sensors/doc/data_sheet/MPXAZ6115A.pdf Link2]
