Edited wiki page ToC through web user interface.

--- a/wiki/ToC.wiki
+++ b/wiki/ToC.wiki
@@ -3,5 +3,5 @@
   * [MSP430Library]
     * [ToDo]
     * [PrjDocu]
-        * [http://code.google.com/p/lib430/source/browse/trunk/LED_Fireplace LED Fireplace]
-        * [http://code.google.com/p/lib430/source/browse/trunk/PC_Starter PC Starter]
+        * [LEDFireplace]
+        * [PCStarter]
