--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -13,3 +13,4 @@ There is a long list for modules to be coded. At least I have most of them runni
   * *MPXH6115A* - C - Freescale Pressure Sensor [http://cache.freescale.com/files/sensors/doc/data_sheet/MPXA6115A.pdf Link1] [http://cache.freescale.com/files/sensors/doc/data_sheet/MPXAZ6115A.pdf Link2]
   * *H1 2322 691 90001* - C - Philips/Vishay Humidity Sensor [http://www.vishay.com/docs/29001/23226919.pdf Link1] [http://www.reichelt.de/index.html?;ACTION=7;LA=3;OPEN=0;INDEX=0;FILENAME=B400%252FFEUCHTESENSOR%2523PHI.pdf;SID=25Ty60yn8AAAIAAB3atUIafb42fc59874e4a6e6a8f7265f72fd42 Link2]
   * *FT232RL* - C - FTDI USB Chip, very easy UART interface via USB [http://www.ftdichip.com/Support/Documents/DataSheets/ICs/DS_FT232R.pdf Link1]
+  * *MMA7455LR2* - C - Freescale 3-Axis Low-g Accelerometer  [http://www.freescale.com/files/sensors/doc/data_sheet/MMA7455L.pdf Link1]
